--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.25.0",
     "html-webpack-plugin": "^2.16.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   },
